[package]
name = "privacy-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stealth-address = { path = "../stealth-address" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stealth-address = { path = "../stealth-address" }
